# mx-sdk-rs-0.35.0-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md  build-wasm.sh  clean-wasm.sh  publish.sh  vm-test-build-copy.sh  zip-example-wasm.sh
contracts/benchmarks/mappers/linked-list-repeat/meta/: Cargo.toml
contracts/core/price-aggregator/meta/: Cargo.toml
contracts/core/wmoax-swap/: Cargo.toml  README.md
contracts/core/wmoax-swap/denali/: unwrap_moax.scen.json  wrap_moax.scen.json
contracts/core/wmoax-swap/interaction/: snippets.sh
contracts/core/wmoax-swap/meta/: Cargo.toml
contracts/core/wmoax-swap/meta/src/: main.rs
contracts/core/wmoax-swap/src/: wmoax.rs
contracts/core/wmoax-swap/tests/: denali_go_test.rs
contracts/core/wmoax-swap/wasm/: Cargo.toml
contracts/core/wmoax-swap/wasm/src/: lib.rs
contracts/examples/crypto-kitties/common/kitty/: Cargo.toml
contracts/examples/multisig/interact-rs/: Cargo.toml
contracts/examples/multisig/interact-rs/src/: multisig_interact.rs  multisig_interact_nfts.rs
contracts/examples/nft-storage-prepay/meta/: Cargo.toml
contracts/examples/ping-pong-moax/wasm/: Cargo.toml
contracts/examples/ping-pong-moax/wasm/src/: lib.rs
contracts/experimental/multisig-external-view/: Cargo.toml  README.md
contracts/experimental/multisig-external-view/denali/: sendDct.scen.json
contracts/experimental/multisig-external-view/interaction/: Multisig-adder-moax.erdjs.md
contracts/experimental/multisig-external-view/meta/: Cargo.toml
contracts/experimental/multisig-external-view/meta/src/: main.rs
contracts/experimental/multisig-external-view/src/: action.rs  multisig_external_view.rs  multisig_perform.rs  multisig_state.rs  user_role.rs
contracts/experimental/multisig-external-view/tests/: multisig_denali_rs_test.rs
contracts/experimental/multisig-external-view/wasm/: Cargo.toml
contracts/experimental/multisig-external-view/wasm-view/src/: lib.rs
contracts/experimental/multisig-external-view/wasm/src/: lib.rs
contracts/feature-tests/composability/dct-contract-pair/first-contract/meta/: Cargo.toml
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/parent/: Cargo.toml
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/parent/interaction/: snippets.sh
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/parent/meta/: Cargo.toml
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/parent/src/: lib.rs
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/parent/wasm/: Cargo.toml
contracts/feature-tests/composability/forwarder/: Cargo.toml
contracts/feature-tests/composability/forwarder/interaction/: snippets.sh
contracts/feature-tests/composability/forwarder/meta/: Cargo.toml
contracts/feature-tests/composability/forwarder/src/: call_async.rs  call_sync.rs  call_transf_exec.rs  dct.rs  forwarder_main.rs  nft.rs  sft.rs
contracts/feature-tests/composability/forwarder/wasm/: Cargo.toml
contracts/feature-tests/composability/forwarder/wasm-no-managed-ei/: Cargo.toml
contracts/feature-tests/composability/forwarder/wasm/src/: lib.rs
contracts/feature-tests/composability/promises-features/: Cargo.toml
contracts/feature-tests/composability/promises-features/meta/: Cargo.toml
contracts/feature-tests/composability/promises-features/src/: promises_features.rs
contracts/feature-tests/composability/promises-features/wasm/: Cargo.toml
contracts/feature-tests/erc-style-contracts/crowdfunding-erc20/meta/: Cargo.toml
contracts/feature-tests/formatted-message-features/: Cargo.toml
contracts/feature-tests/formatted-message-features/denali/: managed_error_message.scen.json
contracts/feature-tests/formatted-message-features/meta/: Cargo.toml
contracts/feature-tests/formatted-message-features/src/: formatted_message_features.rs
contracts/feature-tests/formatted-message-features/tests/: msg_denali_rs_test.rs
contracts/feature-tests/formatted-message-features/wasm/: Cargo.toml
contracts/feature-tests/formatted-message-features/wasm/src/: lib.rs
contracts/feature-tests/multi-contract-features/meta/: Cargo.toml
contracts/feature-tests/use-module/meta/abi/: Cargo.toml
denali/: Cargo.toml
dharitri-interact-snippets/: Cargo.toml  README.md
dharitri-interact-snippets/src/: interactor.rs  interactor_result.rs  interactor_retrieve.rs  interactor_sc_call.rs  interactor_sc_deploy.rs  interactor_sender.rs  interactor_vm_query.rs  lib.rs
dharitri-wasm/: Cargo.toml
dharitri-wasm/src/: err_msg.rs  lib.rs  macros.rs
dharitri-wasm/src/api/: builtin_function_names.rs  call_value_api.rs  send_api.rs
dharitri-wasm/src/api/managed_types/: const_handles.rs  handles.rs  static_var_api.rs
dharitri-wasm/src/api/uncallable/: call_value_api_uncallable.rs  send_api_uncallable.rs  static_var_api_uncallable.rs
dharitri-wasm/src/contract_base/wrappers/: blockchain_wrapper.rs  call_value_wrapper.rs  send_raw_wrapper.rs  send_wrapper.rs  serializer.rs
dharitri-wasm/src/dct/: system_sc_proxy.rs
dharitri-wasm/src/hex_call_data/: cd_ser.rs
dharitri-wasm/src/io/: arg_nested_tuple.rs  call_value_init.rs
dharitri-wasm/src/storage/: storage_get.rs
dharitri-wasm/src/storage/mappers/: bi_di_mapper.rs  fungible_token_mapper.rs  non_fungible_token_mapper.rs  single_value_mapper.rs  token_mapper.rs  unordered_set_mapper.rs  user_mapper.rs  vec_mapper.rs  whitelist_mapper.rs
dharitri-wasm/src/types/interaction/: arg_buffer_managed.rs  async_call.rs  callback_closure.rs  contract_call.rs  contract_deploy.rs
dharitri-wasm/src/types/io/: sc_result.rs
dharitri-wasm/src/types/managed/basic/: big_int.rs  big_uint.rs  elliptic_curve.rs  managed_buffer.rs
dharitri-wasm/src/types/managed/codec_util/: managed_buffer_nested_de_input.rs
dharitri-wasm/src/types/managed/multi_value/: multi_value_encoded.rs
dharitri-wasm/src/types/managed/wrapped/: dct_token_payment.rs  managed_vec.rs  moax_or_dct_token_identifier.rs  moax_or_dct_token_payment.rs  mod.rs  token_identifier.rs
dharitri-wasm/tests/: formatter_test.rs
(+657 files in other folders)
