[package]
name = "dharitri-sc-wmoax-swap"
version = "0.5.4"

authors = [
    "Dorin Iancu <dorin.iancu@dharitri.com>",
    "Dharitri Network <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-new"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri Price aggregator Smart Contract"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]
edition = "2018"

[lib]
path = "src/wmoax.rs"

[dependencies.dharitri-wasm]
version = "0.5.4"
path = "../../../dharitri-wasm"

[dependencies.dharitri-wasm-modules]
version = "0.5.4"
path = "../../../dharitri-wasm-modules"

[dev-dependencies.dharitri-wasm-debug]
version = "0.5.4"
path = "../../../dharitri-wasm-debug"
