[package]
name = "multisig-external-view"
version = "1.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/multisig_external_view.rs"

[dependencies.dharitri-wasm]
version = "0.5.4"
path = "../../../dharitri-wasm"

[dev-dependencies.dharitri-wasm-debug]
version = "0.5.4"
path = "../../../dharitri-wasm-debug"

[dev-dependencies.adder]
path = "../../examples/adder"

[dev-dependencies.factorial]
path = "../../examples/factorial"
