[package]
name = "formatted-message-features"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/formatted_message_features.rs"

[dependencies.dharitri-wasm]
version = "0.5.4"
path = "../../../dharitri-wasm"
features = ["ei-1-2"]

[dev-dependencies.dharitri-wasm-debug]
version = "0.5.4"
path = "../../../dharitri-wasm-debug"
