[package]
name = "dharitri-sc-wmoax-swap-meta"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>",]
edition = "2018"
publish = false

[dev-dependencies]

[dependencies.dharitri-sc-wmoax-swap]
path = ".."

[dependencies.dharitri-wasm]
version = "0.5.4"
path = "../../../../dharitri-wasm"

[dependencies.dharitri-wasm-debug]
version = "0.5.4"
path = "../../../../dharitri-wasm-debug"
