[package]
name = "nft-storage-prepay-meta"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>",]
edition = "2018"
publish = false

[dev-dependencies]

[dependencies.nft-storage-prepay]
path = ".."

[dependencies.dharitri-wasm-debug]
version = "0.5.4"
path = "../../../../dharitri-wasm-debug"
