[package]
name = "ping-pong-moax-wasm"
version = "0.0.1"
authors = [ "Bruda Claudiu-Marcel <claudiu725@yahoo.com>",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.ping-pong-moax]
path = ".."

[dependencies.dharitri-wasm-node]
version = "0.5.4"
path = "../../../../dharitri-wasm-node"

[dependencies.dharitri-wasm-output]
version = "0.5.4"
path = "../../../../dharitri-wasm-output"
features = ["wasm-output-mode"]
