[package]
name = "promises-features"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/promises_features.rs"

[dependencies.vault]
path = "../vault"

[dependencies.dharitri-wasm]
version = "0.5.4"
path = "../../../../dharitri-wasm"
features = ["promises"]

[dependencies.dharitri-wasm-node]
version = "0.5.4"
path = "../../../../dharitri-wasm-node"
optional = true

[dev-dependencies.dharitri-wasm-debug]
version = "0.5.4"
path = "../../../../dharitri-wasm-debug"
