[package]
name = "linked-list-repeat-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[dependencies.linked-list-repeat]
path = ".."

[dependencies.dharitri-wasm-debug]
version = "0.5.4"
path = "../../../../../dharitri-wasm-debug"
