[package]
name = "kitty"
version = "0.0.0"
authors = [ "dorin-iancu <dorin.iancu@dharitri.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-wasm]
version = "0.5.4"
path = "../../../../../dharitri-wasm"

[dependencies.random]
version = "0.0.0"
path = "../random"
