[package]
name = "parent"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"


[dependencies.child]
path = "../child"

[dependencies.dharitri-wasm]
version = "0.5.4"
path = "../../../../../dharitri-wasm"

[dev-dependencies.dharitri-wasm-debug]
version = "0.5.4"
path = "../../../../../dharitri-wasm-debug"

