[package]
name = "crowdfunding-erc20-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[dependencies.crowdfunding-erc20]
path = ".."

[dependencies.dharitri-wasm-debug]
version = "0.5.4"
path = "../../../../../dharitri-wasm-debug"
