[package]
name = "use-module-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[dependencies.use-module]
path = ".."

[dependencies.dharitri-wasm]
version = "0.5.4"
path = "../../../../dharitri-wasm"

[dependencies.dharitri-wasm-debug]
version = "0.5.4"
path = "../../../../dharitri-wasm-debug"
