[package]
name = "parent-meta"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies.parent]
path = ".."

[dependencies.dharitri-wasm]
version = "0.5.4"
path = "../../../../../../dharitri-wasm"

[dependencies.dharitri-wasm-debug]
version = "0.5.4"
path = "../../../../../../dharitri-wasm-debug"
